// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTableHeader is rendered 1`] = `
<thead
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  <tr>
    <td>
      children
    </td>
  </tr>
</thead>
`;

exports[`OuiTableHeader is rendered without <tr> 1`] = `
<thead>
  <tr>
    <td>
      children
    </td>
  </tr>
</thead>
`;
